--- a/posts.html
+++ b/posts.html
@@ -30,12 +30,7 @@ layout: default
 		<div class="about-us">
 			<h3>关于我们</h3>
 			<div class="par">
-				<p>网站设计：@不一样的欣空</p>
-				<p>文案审核：@教给太阳冲奶粉</p>
-				<p>网站代码：@Etsuko29 @Drift-Mr-D</p>
-				<p>时间线整理：@梅子有只小妮猫</p>
-				<p>文案书写：@刘易顺顺顺er @Pomelo-柚子 @勿言勿思勿问 @只是没有星辰了</p>
-				<p>文案整理：@奶罐line @不止旧事 @橘子和橙子的对白 @幻想症研究所 @四叶的薄荷雨 @啊部落 @江宁遇秦 @吃粮猫</p>
+				<p>@不一样的欣空 @教给太阳冲奶粉 @Etsuko29 @Drift-Mr-D @梅子有只小妮猫 @刘易顺顺顺er @Pomelo-柚子 @勿言勿思勿问 @只是没有星辰了 @奶罐line @不止旧事 @橘子和橙子的对白 @幻想症研究所 @四叶的薄荷雨 @啊部落 @江宁遇秦 @吃粮猫</p>
 				<p>图频来源：创造营，大团综，小团综，官方物料，微博授权。版权非本站所有。</p>
 			</div>
 		</div>
